# digitalsreeni-image-annotator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  prd.md  pyproject.toml  requirements.txt  setup.py
.claude/agents/: senior-reviewer.md
.github/roadmap/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md  B1.md  B2.md  B3.md  B4.md  B5.md  B6.md  C1.md  C2.md  D1.md  D2.md  D3.md  README.md
.github/workflows/: tests.yml
data/: download_SAM_models.txt
docs/: 01_introduction_and_goals.md  02_architecture_constraints.md  05_building_block_view.md  06_runtime_view.md  08_crosscutting_concepts.md  09_architecture_decisions.md  11_risks_and_technical_debt.md  12_glossary.md  README.md
src/digitalsreeni_image_annotator/: __init__.py  annotation_statistics.py  annotation_utils.py  annotator_window.py  app_settings.py  dataset_splitter.py  dicom_converter.py  dino_merge_dialog.py  dino_phrase_editor.py  dino_utils.py  dino_worker.py  export_formats.py  help_window.py  image_augmenter.py  image_label.py  image_patcher.py  import_formats.py  main.py  project_details.py  project_search.py  sam_utils.py  sam_worker.py  slice_registration.py  snake_game.py  stack_to_slices.py  utils.py  yolo_trainer.py
tests/: conftest.py
tests/integration/: test_annotation_history.py  test_annotation_table.py  test_bbox_edit_controller.py  test_canvas_selection_controller.py  test_class_controller.py  test_dino_controller.py  test_dino_phrase_panel_sync.py  test_export_formats.py  test_image_controller_slicing.py  test_image_filter_wiring.py  test_import_formats.py  test_io_controller_import.py  test_keypoint_controller.py  test_keypoint_export_import_roundtrip.py  test_project_paths.py  test_project_roundtrip.py  test_sam3_workflow.py  test_sam_controller.py  test_sam_finetuning.py  test_sam_model_load_errors.py  test_sam_train_controller.py  test_sidebar_scroll.py  test_smoke.py  test_tool_mode.py  test_video_loading.py  test_video_timeline_wiring.py  test_video_tracking.py
tests/manual/: profile_lazy_slices.py
tests/ui/: test_font_zoom.py  test_splitter_balance.py
tests/unit/: test_annotation_history.py  test_app_settings.py  test_augmenter_clip.py  test_bbox_edit.py  test_canvas_selection.py  test_class_colors.py  test_conversions.py  test_dataset_splitter_math.py  test_dino_temp_class_accept_reject.py  test_early_stop.py  (+32 more)
tools/: check_pyqt6_torch_coexistence.py  check_worker_isolation.py
(+66 files in other folders)
